<resources>
    <string name="app_name">DTClient</string>
    <string name="setting">采样频率</string>
    <string name="pcm_draw">PCM波形图</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_playing">Start Playing</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="pcm_image_description">PCM波形图</string>
    <string name="cb_savefile">保存文件</string>
    <string name="cb_sendmqtt">MQTT发送</string>
    <string name="mqtt_setting">MQTT服务器设置</string>
    <string name="mqtt_broker">地址</string>
    <string name="mqtt_broker_default">192.168.1.100</string>
    <string name="mqtt_broker_hint">MQTT broker 地址</string>
    <string name="mqtt_port">端口</string>
    <string name="mqtt_port_default">1883</string>
    <string name="mqtt_port_hint">MQTT broker 端口</string>
</resources>
